<resources>
    <string name="app_name">BucketList</string>
    <string name="milestones">Milestones:</string>
    <string name="achieved">Achieved</string>
    <string name="add_wish">Add Your Wish</string>
    <string name="hint_title">Title:</string>
    <string name="hint_category">Category:</string>
    <string name="hint_description">Description:</string>
    <string name="hint_price">Price:</string>
    <string name="hint_target_date">Target Date:</string>
    <string name="add">Add</string>
    <string name="add_milestones">Add Milestones</string>
    <string name="choose_target_date">Choose Target Date</string>
    <string name="your_wish">Your Wish, Master</string>
    <string name="update">Update</string>
    <string name="category">Category</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit_wish">Edit Your Wish</string>
    <string name="backup">Backup</string>
    <string name="couldnt_connect_to_google_manager">Could not connect to Google Drive Manager</string>
    <string name="restore">Restore</string>
    <string name="upload">Upload to Google Drive. Wait a moment</string>
    <string name="no_backups">No backups available</string>
    <string name="downloading_backup">Downloading backup. Please stand by</string>
    <string name="connect_google_drive">Connect to Google Drive</string>
    <string name="settings">Settings</string>
    <string name="achieved_sound">Achieved sound</string>
    <string name="language">Language</string>
    <string name="havent_picked_image">You Haven\'t Picked Image</string>
    <string name="bad">Something went wrong</string>
    <string name="title_activity_settings">Settings</string>
    <string name="changes_applied">Changes Applied</string>
    <string name="select_main_toolbar_image">Select Main Toolbar Image</string>
    <string name="select_drawer_image">Select Drawer Image</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="target_date">Target Date</string>
    <string name="sort_by">Sort by</string>
    <string name="cash">Cash</string>
    <string name="enter_cash">Enter cash amount:</string>
    <string name="search">Search</string>
    <string name="inspiration">Inspirational Quotes</string>
    <string name="connection_failed">Connection to Google Drive failed</string>
    <string name="no_access_to_account">Can\'t get access to account</string>
    <string name="place_finger">Please place your finger on the scanner to verify your identity</string>
    <string name="register_fingerprint">Register at least one fingerprint to secure this app</string>
    <string name="enable_lock">Lock screen security not enabled in smartphone settings</string>
    <string name="fingerprint_failed">Fingerprint authentication failed!</string>
    <string name="notifications">Notifications</string>
    <string name="notification">Notification</string>
    <string name="upcoming_wishes">You have upcoming wishes</string>
    <string name="security">Security</string>
    <string-array name="category_init">
        <item>Travel</item>
        <item>Health</item>
        <item>Work</item>
        <item>Learning</item>
        <item>Love</item>
    </string-array>
</resources>