<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="achieved_sound"
        android:summaryOff="Off"
        android:summaryOn="On"
        android:title="@string/achieved_sound"/>
    <Preference
        android:key="select_toolbar_image"
        android:title="@string/select_main_toolbar_image" />
    <Preference
        android:key="select_drawer_image"
        android:title="@string/select_drawer_image" />
    <CheckBoxPreference
        android:title="@string/notifications"
        android:defaultValue="true"
        android:summaryOff="Off"
        android:summaryOn="On"
        android:key="notification" />
    <CheckBoxPreference
        android:title="@string/security"
        android:defaultValue="true"
        android:summaryOff="Off"
        android:summaryOn="On"
        android:key="security" />

</PreferenceScreen>