<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:fillViewport="true">
<android.support.constraint.ConstraintLayout
    android:id="@+id/add_wish_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ua.aengussong.www.bucketlist.WishHandlingActivity"
    android:background="@color/colorPrimary"

    >

    <ImageView android:id="@+id/image_view_add_wish"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" />

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar_actionbar"
        android:title="@string/add_wish"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:theme="@style/MyToolbar">
        <ImageButton
    android:src="@drawable/ic_action_close"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity = "start"
    android:background="@null"
    android:onClick="onCloseMenuButton"/>

    <TextView
        android:id="@+id/wish_handling_toolbar_title"
        android:layout_gravity = "center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/md_white_1000"
        android:text="@string/add_wish"
        android:textSize="25sp"/>
    </android.support.v7.widget.Toolbar>

    <ImageButton
        android:id="@+id/add_add_image_photo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/add_image_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_actionbar"
        android:onClick="loadImageFromGallery"
        />
    <ImageButton
        android:id="@+id/delete_image_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/delete_image_button"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_actionbar"
        android:visibility="invisible"
        android:onClick="deleteSelectedImage"
        />
    <EditText
        tools:text="title_edit"
        android:hint="@string/hint_title"
        android:textColorHint="@color/md_white_1000"
        android:textColor="@color/md_white_1000"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/add_title_edit"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/add_add_image_photo"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp" />
    <EditText
        tools:text="category_edit"
        android:text="@string/hint_category"
        android:textColorHint="@color/md_white_1000"
        android:textColor="@color/md_white_1000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_title_edit"
        android:id="@+id/add_category_edit"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:focusable="false"/>
    <android.support.v7.widget.AppCompatSpinner
        android:id = "@+id/category_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/add_category_edit"
        app:layout_constraintTop_toBottomOf="@+id/add_title_edit"
        android:layout_marginEnd="8dp"
        app:theme="@style/MooTheme"/>
    <EditText
        android:hint="@string/hint_description"
        android:textColorHint="@color/md_white_1000"
        android:textColor="@color/md_white_1000"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        tools:text="description_edit"
        app:layout_constraintTop_toBottomOf="@+id/add_category_edit"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/add_description_edit"
        android:layout_marginStart="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp" />
    <EditText
        android:hint="@string/hint_price"
        android:textColorHint="@color/md_white_1000"
        android:textColor="@color/md_white_1000"
        tools:text="price_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/add_description_edit"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/add_price_edit"
        android:layout_marginStart="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp"
        android:inputType="number"/>
    <EditText
        android:hint="@string/hint_target_date"
        android:textColorHint="@color/md_white_1000"
        android:textColor="@color/md_white_1000"
        tools:text="target date_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/add_price_edit"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/add_target_date_edit"
        android:layout_marginStart="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp"
        android:inputType="datetime"
        android:onClick="showDatePickerDialog"
        android:focusable="false"/>
    <EditText
        android:id="@+id/add_milestones_edit"
        android:hint="@string/add_milestones"
        android:textColorHint="@color/md_white_1000"
        android:textColor="@color/md_white_1000"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/add_target_date_edit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:imeOptions="actionDone"
        android:inputType="textShortMessage"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/add_milestones_edit"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="horizontal"
        android:id="@+id/llrv">
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rv_add_milestones"

        />
    </LinearLayout>
    <Button
        android:id="@+id/add_wish_button"
        android:background="@drawable/round_button"
        android:layout_width="0dp"
        android:textSize="22sp"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintTop_toBottomOf="@+id/llrv"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="onClickAddWish"
        android:layout_marginTop="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />
    <Button
        android:id="@+id/update_wish_button"
        android:background="@drawable/round_button"
        android:layout_width="0dp"
        android:textSize="22sp"
        android:layout_height="wrap_content"
        android:text="@string/update"
        app:layout_constraintTop_toBottomOf="@+id/llrv"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="onClickUpdateWish"
        android:layout_marginTop="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:visibility="invisible" />
</android.support.constraint.ConstraintLayout>
</ScrollView>